--- a/Pokemon Card/index.html
+++ b/Pokemon Card/index.html
@@ -6,7 +6,17 @@
     <title>PokeDex</title>
 </head>
 <body>
-    <div class="poke"></div>
+    <div class="container">
+        <div class="search-wrapper">
+            <input type="text" name="" id="country-inp" placeholder="Enter a pokemon name her...">
+            <button id="search-btn">Search</button>
+        </div>
+        
+    </div>
+    <div class="result container">
+    </div>
+
+    </div>
 </body>
 <script src="script.js"></script>
 </html>
