--- a/index.html
+++ b/index.html
@@ -39,10 +39,33 @@
             <p class="text-lg mb-8" data-aos="fade-up">Welcome to my assignments page! Here you can find all the assignments I have completed.</p>
             <a href="#projects" class="bg-indigo-600 text-white px-6 py-3 rounded-lg shadow-lg hover:bg-indigo-700 transition duration-300" data-aos="fade-up">View Projects</a>
         </div>
+    </section>
+  <!-- About Section -->
+    <section class="py-20" id="about">
+        <div class="max-w-6xl mx-auto px-4">
+        <h2 class="text-3xl font-bold mb-6 text-center" data-aos="fade-up">About Assignments</h2>
+        <p class="text-lg text-gray-700 mb-8 text-center" data-aos="fade-up">This page showcases my assignments and projects that I have completed during my studies. Each project is a reflection of my skills and knowledge in various areas.</p>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+            <div class="bg-white shadow-lg rounded-lg p-6" data-aos="fade-up">
+                <h3 class="text-xl font-semibold mb-4">Country Guide App</h3>
+                <p class="text-gray-700">A web application that provides information about different countries.</p>
+                <a href="/Country guide app/index.html" class="text-indigo-600 hover:underline mt-4 block">View Project</a>
+            </div>
+            <div class="bg-white shadow-lg rounded-lg p-6" data-aos="fade-up">
+                <h3 class="text-xl font-semibold mb-4">Assignment 2</h3>
+                <p class="text-gray-700">Description of Assignment 2.</p>
+                <a href="#" class="text-indigo-600 hover:underline mt-4 block">View Project</a>
+            </div>
+            <div class="bg-white shadow-lg rounded-lg p-6" data-aos="fade-up">
+                <h3 class="text-xl font-semibold mb-4">Assignment 3</h3>
+                <p class="text-gray-700">Description of Assignment 3.</p>
+                <a href="#" class="text-indigo-600 hover:underline mt-4 block">View Project</a>
+            </div>
+        </div>
+        </div>
+    </section>
 
-
-
-  
+        
   
 
   <!-- Footer -->
